src/components/A11yStatusTable/a11y-status-table.module.scss
.table {
  margin-top: $spacing-06;
}

.help {
  position: relative;
  padding-left: $spacing-03;
  top: $spacing-01;
}

.version {
  --space: 1.5rem;
}

:global(.cds--definition-term),
:global(.cds--tag) {
  white-space: nowrap;
}

:global(.cds--tag .cds--popover) {
  white-space: normal;
}

